@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* To avoid confusion, we changed label "Duration" to "Time Limit".
 
 = 2.0.5 =
 -------------------------------------------------
